Fixed scenario in which two records were created for the same file in the same layer.